--- a/source/catalog.html
+++ b/source/catalog.html
@@ -359,7 +359,7 @@
 </main>
 <footer class="footer">
   <section class="footer__collaboration collaboration">
-    <div class="collaboration__wrapper collaboration__wrapper--index">
+    <div class="collaboration__wrapper">
       <h2 class="collaboration__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
       <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 <span class="collaboration__address--city">Санкт-Петербург</span>
       </p>
