--- a/source/form.html
+++ b/source/form.html
@@ -87,7 +87,7 @@
           <legend class="program-form__contacts-title program-form__legend">Контактные данные (владельца кота)</legend>
           <div class="container container-form">
             <ul class="program-form__contacts-list">
-              <li class="program-form__contacts-item">
+              <li class="program-form__contacts-item program-form__item--phone">
                 <label class="program-form__contacts-label program-form__contacts-label--phone"
                   for="email">E-mail:*</label> <input class="program-form__contacts-input" type="email" id="email"
                 placeholder="kuklachev@gmail.com">
@@ -97,7 +97,7 @@
                     d="M15.6 11.6H1.4V5.8H0V13h17V5.8h-1.4v5.8zM0 0v2.3l8.5 7.1L17 2.3V0H0zm15.6 1.6L8.5 7.5 1.4 1.6v-.2h14.2v.2z"/>
                 </svg>
               </li>
-              <li class="program-form__contacts-item">
+              <li class="program-form__contacts-item program-form__item--mail">
                 <label class="program-form__contacts-label" for="phone">Телефон:*</label> <input
                 class="program-form__contacts-input" type="tel" id="phone" placeholder="8 (960) 900-60-90">
                 <svg class="program-form__contacts-icon" width="21" height="21" viewBox="0 0 20 20">
