pixelPerfect index mobile

--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 <div class="site-container">
   <header class="page-header">
     <div class="container container--mobile">
-      <nav class="main-nav main-nav--nojs">
+      <nav class="main-nav main-nav--opened">
         <div class="main-nav__wrapper-head">
           <a class="main-nav__logo-link" href="index.html">
             <picture>
