--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 <body>
 <header class="page-header">
   <div class="container container--mobile">
-    <nav class="main-nav main-nav--nojs">
+    <nav class="main-nav main-nav--closed">
       <div class="main-nav__wrapper-head">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
