--- a/source/form.html
+++ b/source/form.html
@@ -100,7 +100,7 @@
           <ul class="program-form__contacts-list">
             <li class="program-form__contacts-item program-form__item--phone">
               <label class="program-form__contacts-label program-form__contacts-label--phone"
-                  for="email">E-mail:*</label> <input class="program-form__contacts-input"
+                  for="email">E-mail:*</label> <input class="program-form__contacts-input" name="email"
                 type="email" id="email"
                 placeholder="kuklachev@gmail.com">
               <svg class="program-form__contacts-icon program-form__contacts-icon--mail" width="18"
@@ -112,7 +112,7 @@
             </li>
             <li class="program-form__contacts-item program-form__item--mail">
               <label class="program-form__contacts-label" for="phone">Телефон:*</label> <input
-                class="program-form__contacts-input" type="tel" id="phone"
+                class="program-form__contacts-input" name="phone" type="tel" id="phone"
                 placeholder="8 (960) 900-60-90">
               <svg class="program-form__contacts-icon" width="21" height="21" viewBox="0 0 20 20">
                 <path
@@ -167,54 +167,42 @@
 </main>
 <footer class="footer">
   <section class="footer__collaboration collaboration">
-    <div class="collaboration__wrapper">
+    <div class="collaboration__wrapper collaboration__wrapper--index">
       <h2 class="collaboration__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
-      <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 <span
-          class="collaboration__address--city">Санкт-Петербург</span>
+      <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8
+        <span class="collaboration__address--city">Санкт-Петербург</span>
       </p>
     </div>
     <div class="collaboration__map">
-      <picture class="collaboration__map-container">
-        <source media="(min-width: 1440px)"
-            srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
-        <source media="(min-width: 768px)"
-            srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
-        <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png"
-            srcset="img/bg-map-mobile@2x.png 2x"
-            alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-      </picture>
+      <div class="collaboration__map-wrapper">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+          <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
+              alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        </picture>
+      </div>
     </div>
   </section>
   <div class="footer__social">
     <div class="container">
       <div class="footer__social-wrapper">
-        <a class="footer__logo"> <img class="footer__logo-img" src="img/logo-footer.svg" width="128"
-            height="24"
-            alt="логотип Cat Energy"> </a>
+        <a class="footer__logo">
+          <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="логотип Cat Energy">
+        </a>
         <ul class="footer__social-list">
           <li class="footer__social-item"><a class="footer__social-link footer__social-link--vk" href="#">Вконтакте
-            <svg class="footer__social-img footer__social-img--vk" width="22" height="12"
-                viewBox="0 0 22 12">
+            <svg class="footer__social-img footer__social-img--vk" width="22" height="12" viewBox="0 0 22 12">
               <path
                   d="M17.6 12c-.3 0-.9-.1-1.5-.5-.5-.3-.9-.7-1.3-1.2-.3-.3-.9-.9-1.1-.9-.2.1-.4.7-.3 1.2 0 .1 0 .6-.3.9-.3.3-.8.4-.9.4h-1.4c-.7 0-3.2-.2-5.4-2.3C2.5 7.1.2 2.2.1 2 0 1.6-.1 1.2.2.9s.8-.4 1-.4h3.1c.1 0 .4.1.7.3.3.2.4.5.5.6.7 1.5 1.5 2.8 2.6 4 .1-.4.2-1.4.1-2.3 0-.4-.1-.8-.2-1-.1-.1-.3-.2-.5-.2l-.6-.5c0-.5.5-.9.9-1.1.5-.2 1.3-.3 2.3-.3h.5c.9 0 1.2.1 1.6.1 1.2.3 1.2 1.3 1.1 2.5v1.6c0 .3 0 .8.1 1 .2-.1.6-.5 1.5-1.9.6-.9 1-1.9 1.1-2.1.1-.3.4-.7 1.2-.7h3.4c.7 0 1.2.2 1.3.7.2.5.1 1.3-1.7 3.5-.3.3-.5.6-.7.9-.5.4-.9 1-.9 1.1s.5.5.9.9c1.1.9 1.9 1.7 2.2 2.3.4.6.3 1 .2 1.3-.3.7-1.2.7-1.4.8h-2.8-.1zm-3.9-3.7c.7 0 1.2.6 1.8 1.2.4.4.7.8 1.1 1 .5.3 1 .3 1 .3h2.9c.1 0 .3-.1.4-.1 0 0 0-.1-.1-.1-.3-.5-1-1.3-2-2.1-.9-.7-1.3-1.1-1.4-1.7 0-.6.4-1.1 1.2-2.1.2-.2.4-.5.7-.8 1.1-1.4 1.4-2 1.5-2.3h-3.9c0 .4-.5 1.5-1.1 2.4-1.4 2.1-2 2.4-2.5 2.4-.1 0-.3 0-.4-.1-.7-.4-.7-1.4-.7-2.1V2.6c.1-1.3 0-1.3-.3-1.4-.3-.1-.5-.1-1.4-.1H10c-.5 0-1 0-1.4.1l.2.2c.4.5.4 1.5.4 1.7.1 1.3 0 2.9-.7 3.3-.1 0-.2.1-.4.1-.6 0-1.3-.7-2.5-2.5C5 2.9 4.5 1.8 4.5 1.8s0-.1-.1-.1-.2-.1-.2-.1h-3c.4.9 2.5 5 4.8 7.2 2 1.9 4.3 2 4.7 2h1.4s.2 0 .2-.1v-.1c0-.2 0-2 1.2-2.3h.2z"/>
             </svg>
           </a></li>
-          <li class="footer__social-item"><a class="footer__social-link footer__social-link--inst"
-              href="#">Инстаграм
-            <svg class="footer__social-img  footer__social-img--inst" width="17" height="17"
-                version="1.1" x="0" y="0"
-                viewBox="0 0 16.1 16">
-              <path class="st0"
-                  d="M11.8 1C13.6 1 15 2.4 15 4.2v7.7c0 1.7-1.4 3.1-3.1 3.1H4.2C2.4 15 1 13.6 1 11.8V4.2C1 2.4 2.4 1 4.2 1h7.6m0-1H4.2C1.9 0 0 1.9 0 4.2v7.7C0 14.1 1.9 16 4.2 16h7.7c2.3 0 4.2-1.9 4.2-4.2V4.2C16 1.9 14.1 0 11.8 0z"/>
-              <path class="st0"
-                  d="M8 4.9c1.7 0 3.1 1.4 3.1 3.1S9.7 11.1 8 11.1 4.9 9.7 4.9 8 6.3 4.9 8 4.9m0-1C5.7 3.9 3.9 5.7 3.9 8s1.8 4.1 4.1 4.1 4.1-1.8 4.1-4.1S10.3 3.9 8 3.9z"/>
-              <circle class="st0" cx="12.3" cy="3.7" r=".9"/>
-            </svg>
+          <li class="footer__social-item"><a class="footer__social-link footer__social-link--inst" href="#">Инстаграм
+            <svg class="footer__social-img  footer__social-img--inst" width="17" height="17" x="0" y="0" viewBox="0 0 16.1 16"><path d="M11.8 1C13.6 1 15 2.4 15 4.2v7.7c0 1.7-1.4 3.1-3.1 3.1H4.2C2.4 15 1 13.6 1 11.8V4.2C1 2.4 2.4 1 4.2 1h7.6m0-1H4.2C1.9 0 0 1.9 0 4.2v7.7C0 14.1 1.9 16 4.2 16h7.7c2.3 0 4.2-1.9 4.2-4.2V4.2C16 1.9 14.1 0 11.8 0z"/><path class="st0" d="M8 4.9c1.7 0 3.1 1.4 3.1 3.1S9.7 11.1 8 11.1 4.9 9.7 4.9 8 6.3 4.9 8 4.9m0-1C5.7 3.9 3.9 5.7 3.9 8s1.8 4.1 4.1 4.1 4.1-1.8 4.1-4.1S10.3 3.9 8 3.9z"/><circle class="st0" cx="12.3" cy="3.7" r=".9"/></svg>
           </a>
           </li>
           <li class="footer__social-item"><a class="footer__social-link footer__social-link--fb" href="#">Фейсбук
-            <svg class="footer__social-img footer__social-img--fb" width="10" height="19"
-                viewBox="0 0 10 19">
+            <svg class="footer__social-img footer__social-img--fb" width="10" height="19" viewBox="0 0 10 19">
               <path
                   d="M7.1 19H2v-8.8H0V5.8h1.9c-.1-2 .2-3.4 1.1-4.4C3.8.5 5 .1 6.5 0H10v4.2H7.2c-.1.2-.2.8-.2 1.6h3v4.4H7.1V19zm-4-1h2.8V9.1h2.9V6.8H5.9v-.5c0-1.4 0-2.6.7-3.1l.1-.1h2.1V1H6.5c-1.2.1-2 .4-2.6 1-.8.8-1 2.3-.8 4.2l.1.6H1.1v2.3h2V18z"/>
             </svg>
