--- a/source/form.html
+++ b/source/form.html
@@ -92,10 +92,10 @@
           </div>
         </fieldset>
       </div>
-      <fieldset class="program-form__contacts program-form__fieldset">
-        <legend class="program-form__contacts-title program-form__legend">Контактные данные (владельца
+      <div class="program-form__contacts program-form__fieldset">
+        <h2 class="program-form__contacts-title program-form__legend">Контактные данные (владельца
           кота)
-        </legend>
+        </h2>
         <div class="container container-form">
           <ul class="program-form__contacts-list">
             <li class="program-form__contacts-item program-form__item--phone">
@@ -121,16 +121,16 @@
             </li>
           </ul>
         </div>
-      </fieldset>
-      <fieldset class="program-form__comment program-form__fieldset">
-        <legend class="program-form__comment-title program-form__legend">Комментарий</legend>
+      </div>
+      <div class="program-form__comment program-form__fieldset">
+        <h2 class="program-form__comment-title program-form__legend">Комментарий</h2>
         <div class="container container-form">
             <textarea class="program-form__comment-input" name="comment" rows="10" wrap="soft"
                 placeholder="Расскажите обо всех повадках кота"></textarea>
         </div>
-      </fieldset>
-      <fieldset class="program-form__additionally program-form__fieldset">
-        <legend class="program-form__additionally-title program-form__legend">Дополнительно</legend>
+      </div>
+      <div class="program-form__additionally program-form__fieldset">
+        <h2 class="program-form__additionally-title program-form__legend">Дополнительно</h2>
         <div class="container container-form">
           <ul class="program-form__list-checkbox">
             <li class="program-form__item-checkbox">
@@ -155,7 +155,7 @@
             </li>
           </ul>
         </div>
-      </fieldset>
+      </div>
       <div class="container container-form">
         <div class="program-form__button-wrapper">
           <button class="program-form__button button" type="submit">Отправить заявку</button>
@@ -167,22 +167,21 @@
 </main>
 <footer class="footer">
   <section class="footer__collaboration collaboration">
-    <div class="collaboration__wrapper collaboration__wrapper--index">
-      <h2 class="collaboration__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
-      <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8
-        <span class="collaboration__address--city">Санкт-Петербург</span>
-      </p>
-    </div>
-    <div class="collaboration__map">
-      <div class="collaboration__map-wrapper">
-        <picture>
-          <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
-          <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
-              alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-        </picture>
+    <div class="collaboration__wrapper-container">
+      <div class="collaboration__wrapper collaboration__wrapper--index">
+        <h2 class="collaboration__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
+        <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8
+          <span class="collaboration__address--city">Санкт-Петербург</span>
+        </p>
       </div>
+      <picture>
+        <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+        <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+        <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
+            alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      </picture>
     </div>
+    <!--<iframe class="collaboration__map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586871!2d30.3208533513628!3d59.93871648178722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1579584540005!5m2!1sru!2sru" width="800" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>-->
   </section>
   <div class="footer__social">
     <div class="container">
