--- a/source/index.html
+++ b/source/index.html
@@ -158,7 +158,7 @@
           <div class="example__illustration-toggle">
             <button class="example__illustration-button" type="button">Было</button>
             <div class="example__illustration-scale">
-              <button type="button" class="example__illustration-bar"></button>
+              <button type="button" class="example__illustration-bar">Кнопка</button>
             </div>
             <button class="example__illustration-button" type="button">Стало</button>
           </div>
