--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
 <body>
 <header class="page-header">
   <div class="container container--mobile">
-    <nav class="main-nav main-nav--nojs">
+    <nav class="main-nav main-nav--closed">
       <div class="main-nav__wrapper-head">
         <a class="main-nav__logo-link" href="index.html">
           <picture>
@@ -47,7 +47,7 @@
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-                  <img class="product__img" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом курицы">
+                  <img class="product__img" width="140" height="144" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом курицы">
                 </picture>
               </a>
               <div class="product__wrapper-text">
@@ -346,7 +346,7 @@
 <footer class="footer">
   <section class="footer__collaboration collaboration">
     <div class="collaboration__wrapper-container">
-      <div class="collaboration__wrapper collaboration__wrapper--index">
+      <div class="collaboration__wrapper">
         <h2 class="collaboration__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
         <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8
           <span class="collaboration__address--city">Санкт-Петербург</span>
