--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
 <body>
 <header class="page-header">
   <div class="container container--mobile">
-    <nav class="main-nav main-nav--nojs">
+    <nav class="main-nav main-nav--closed">
       <div class="main-nav__wrapper-head">
         <a class="main-nav__logo-link" href="index.html">
           <picture>
@@ -141,7 +141,7 @@
 <footer class="footer">
   <section class="footer__collaboration collaboration">
     <div class="collaboration__wrapper-container">
-      <div class="collaboration__wrapper collaboration__wrapper--index">
+      <div class="collaboration__wrapper">
         <h2 class="collaboration__title">Приглашаем<br> к сотрудничеству дилеров!</h2>
         <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8
           <span class="collaboration__address--city">Санкт-Петербург</span>
@@ -153,7 +153,7 @@
         <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       </picture>
     </div>
-    <!--<iframe class="collaboration__map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586871!2d30.3208533513628!3d59.93871648178722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1579584540005!5m2!1sru!2sru" width="800" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>-->
+    <!--<iframe class="collaboration__map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586871!2d30.3208533513628!3d59.93871648178722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1579584540005!5m2!1sru!2sru" width="800" height="400" frameborder="0" style="border: 0;" allowfullscreen=""></iframe>-->
   </section>
   <div class="footer__social">
     <div class="container">
