--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
 <body>
 <header class="page-header">
   <div class="container container--mobile">
-    <nav class="main-nav main-nav--closed">
+    <nav class="main-nav main-nav--nojs">
       <div class="main-nav__wrapper-head">
         <a class="main-nav__logo-link" href="index.html">
           <picture>
